Remove hunspell, libssh2, lua and openssl submodules in favour of conan as fallback

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ build
 .cache
 .DS_Store
 .project
-.vscode/
+.vscode/*
+!.vscode/settings.json
 CMakeLists.txt.user
 cmake-build-debug/
 build*
@@ -12,3 +13,4 @@ build
 .venv
 compile_commands.json
 .flatpak-builder
+CMakeUserPresets.json
